rs/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rs-api
  labels:
    app: rs-api

spec:
  replicas: 3
  selector:
    matchLabels:
      # (1) link :
      app: rs-api

# Стратегия обновления
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1

#      параметры запуска:
  template:
    metadata:
      labels:
        # (1) link ^
        app: rs-api
    spec:
      containers:
        - name: rs-api
          image: 8881981/rs:1.0.1
          ports:
            - containerPort: 8081
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/readiness
              port: 8091
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          # Приложение живое (если перегружено - живое)
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/liveness
              port: 8091
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 10
