rs/k8s/is.yaml
apiVersion: v1
kind: Service
metadata:
  name:
    nginx-app-svc
spec:
  selector:
    app: nginx-ing
  ports:
    - port: 80
      targetPort: 80
      name: http
    - name: https
      port: 443
      targetPort: 443
  type: ClusterIP
