rs/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rs-api
spec:
#  externalIPs:
#    - 176.53.163.61
#  На какие pods делать запросы
  selector:
    app: rs-api
  ports:
    - protocol: TCP
      port: 80

#      На каком порту запускается приложение
      targetPort: 8081
