rs/k8s/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nifont
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
#  ingressClassName: nginx-example
  rules:
    - http:
        paths:
          - path: /rs
            pathType: Prefix
            backend:
              service:
                name: rs-api
                port:
                  number: 80
